# rust_grpc

./: ,env  .env  Cargo.toml  README.md  build.rs
proto/: .say.proto  say.proto  user.proto
src/: client.rs  db_connection.rs  main.rs  server.rs  service.rs
src/env/: mod.rs
