[package]
authors = ["kijang <wahyu.creator911@gmail.com>"]
edition = "2018"
name = "rust_grpc"
version = "0.1.0"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
futures = "0.3"
prost = "0.6.1"
tokio = {version = "0.2.18", features = ["stream", "macros"]}
tonic = {version = "0.2.0", features = ["tls"]}

[build-dependencies]
tonic-build = "0.2.0"
